# electroland_repos

./: FIL_2screens.bat  GuestureTrack.sln  simpleGL.cpp
ArtNetBroadcaster/: .classpath  lights.properties
ArtNetBroadcaster_LAFM/: .classpath  .project  ART_NET_build.xml
AxisCam/: .project
Connection/: .classpath  .fatjar  CONNECTION_build.xml  PeopleCount.log.2008-12-01  PeopleCount.log.2008-12-03  PeopleCount.log.2008-12-18  PeopleCount.log.2008-12-20  PeopleCount.log.2008-12-21  PeopleCount.log.2008-12-24  PeopleCount.log.2008-12-25  PeopleCount.log.2008-12-26  PeopleCount.log.2008-12-27  PeopleCount.log.2008-12-28  PeopleCount.log.2008-12-29  PeopleCount.log.2008-12-30  PeopleCount.log.2009-01-02  PeopleCount.log.2009-01-05  PeopleCount.log.2009-01-06  PeopleCount.log.2009-01-07  PeopleCount.log.2009-01-09  PeopleCount.log.2009-01-13
Duke/: DukePrototype.fla  DukePrototype.swf  macros.xml
EIA/: .classpath  .project
EIO2/: .classpath  .project  buildEIO.xml
ELPTrack/: Blob.cpp  Blob.h  CMakeLists.txt  ELTimer.cpp  ELTimer.h  ErrorLog.cpp  ErrorLog.h  FlyCap.cpp  FlyCap.h  GreedyTracker.cpp  GreedyTracker.h  MesaBGSubtractor.cpp  MesaBGSubtractor.h  MesaCam.cpp  MesaCam.h  OSCTrackSender.cpp  OSCTrackSender.h  PlanView.cpp  PlanView.h  PointCloudConstructor.cpp  PointCloudConstructor.h  PropChangeListener.h  Props.cpp  Props.h  PulseDetector.cpp  PulseDetector.h  SurfDetector.cpp  SurfDetector.h  Track.cpp  Track.h  TrackMatch.cpp  TrackMatch.h  Tracker.cpp  Tracker.h  main_person_track_3d.cpp  mesa_grabber.cpp  mesa_grabber.h
ELPTrack/Release/2013_08_22/: ELPTrack.ini  README.txt
ELPTrack/Release/2013_09_29/: ELPTrack.ini  ELPTrack_0.ini  README.txt
ELPTrack/Release/2013_09_29_2/: ELPTrack.ini  README.txt
ELPTrack/Release/2013_10_1/: README.txt
ELPTrack/Release/2013_10_2/: ELPTrack.ini  README.txt
ELPTrack/Release/2013_10_25/: ELPTrack.ini  ELPTrack_doubleWide.ini  README.txt
ELPTrack/ip/: NetworkingUtils.cpp  UdpSocket.cpp
Edmonton/: .classpath  .project  build-edmonton.xml
ElVis/: .classpath  .project  ELVIS_build.xml  blobTrackDefs.props  blobTracker.props  brad_north.elv
ElVisAxisCam/: .project  ELVIS_AXIS_CAM_build.xml
ElVisBlobTracker/: .classpath  .project  blobTracker-std.props  blobTracker.props  docs.txt
ElVisPresenceGrid/: .classpath  .project  gridProps.props  mira-gridProps.props  pool1.props  pool2.props  tableCam.props  tableCam_TUES_PRECHANGE.props
ElVisVideoProcessor/: .classpath  .project  ELVIS_VIDEO_PROCESSOR_build.xml  LAFace.props  (+1 more)
(+3201 files in other folders)
