cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(PersonTrack3D)
set(PCL_DIR "C:/Program Files (x86)/PCL")
set(MESA_PATH "C:/Program Files (x86)/MesaImaging/Swissranger/libMesaSR" CACHE PATH "path to mesa libs")
set(OPENCV_BLD_PATH "C:/opencv/build/x86/vc10" CACHE PATH "path to the open CV build")
set(OPENCV_INC_PATH "C:/opencv/build/include" CACHE PATH "path to the open CV incluse")
find_package(PCL 1.3 REQUIRED COMPONENTS common io visualization sample_consensus)
#find_package( OpenCV REQUIRED ) doesn't work

set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME OFF) 
find_package(Boost 1.50.0 COMPONENTS program_options) 


include_directories(${PCL_INCLUDE_DIRS}  ${OPENCV_INC_PATH} ${MESA_PATH} ${Boost_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS} "${OPENCV_BLD_PATH}/lib" ${MESA_PATH} )
add_definitions(${PCL_DEFINITIONS})
add_executable(person_track_3d main_person_track_3d.cpp)
set(OPENCV_LIBS_FIX)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_calib3d245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_contrib245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_core245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_features2d245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_flann245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_gpu245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_haartraining_engined.lib )
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_highgui245d.lib )
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_imgproc245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_legacy245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_ml245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_nonfree245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_objdetect245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_photo245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_stitching245d.lib )
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_ts245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_video245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_videostab245d.lib)
set(OPENCV_LIBS_FIX ${OPENCV_LIBS_FIX} opencv_videostab245d.lib)
target_link_libraries(person_track_3d ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_SAMPLE_CONSENSUS_LIBRARIES} ${PCL_VISUALIZATION_LIBRARIES} ${OPENCV_LIBS_FIX}  ${Boost_LIBRARIES} libMesaSR.lib  winmm.lib)